mmpriv.h

typedef struct mm_ref_analysis_collect_s mm_ref_analysis_collect_t;
mm_ref_analysis_collect_t *mm_ref_analysis_collect_init(const mm_idx_t *mi, const mm_ref_analysis_opt_t *opt);
void mm_ref_analysis_collect_destroy(mm_ref_analysis_collect_t *c);
void mm_ref_analysis_collect_set_total(mm_ref_analysis_collect_t *c, int64_t total_reads);
void mm_ref_analysis_step(mm_ref_analysis_collect_t *c, const mm_bseq1_t *t, int n_reg, mm_reg1_t *regs);
int mm_ref_analysis_collect_finish(mm_ref_analysis_collect_t *c, mm_ref_analysis_result_t **out);